<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:background="@android:color/darker_gray" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_item_name"
            style="@style/TextContent.Black"
            android:text="@string/mobil_name"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_harga"
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="16dp"
            android:text="@string/harga" />

        <TextView
            style="@style/TextContent"
            android:id="@+id/tv_detail"
            android:text="@string/detail"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/seller"
            android:layout_marginBottom="8dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/foto"
                android:layout_centerVertical="true"
                android:id="@+id/profile_image"
                android:layout_marginRight="16dp"/>

            <TextView
                style="@style/TextContent"
                android:layout_toEndOf="@+id/profile_image"
                android:layout_toRightOf="@+id/profile_image"
                android:text="@string/my_name"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_dial_number"
            style="@style/ButtonGeneral"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:text="@string/call" />

    </LinearLayout>
</ScrollView>